# ensembl-scraper

./: README.md  pyproject.toml
src/: scraper.py
