[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ensembl_scraper"
version = "0.0.3"
authors = [
  { name="Dakota Kosiorek", email="dakota.michael.kosiorek@gmail.com" },
]
description = "Get's the DNA sequence from an Ensembl wep page"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/dakota-kosiorek/ensembl-scraper"
"Bug Tracker" = "https://github.com/dakota-kosiorek/ensembl-scraper/issues"